--- a/Qunit/index.html
+++ b/Qunit/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -12,8 +12,8 @@
   <input type="Submit" id="calculatebtn" value="Calculate">
   <script src="calculator.js"></script>
   <script type="text/javascript">
-    document.getElementById('calculatebtn').onclick = function(e){
-	var input = document.getElementById('input_area').value;
+      document.getElementById('calculatebtn').onclick = function (e) {
+          var input = document.getElementById('input_area').value;
         document.getElementById('result').innerHTML = eval(input);
     }
   </script>
